Fixed transaction alignment

--- a/components/history/history.style.css
+++ b/components/history/history.style.css
@@ -36,6 +36,9 @@
 }
 
 .content-history img {
+	max-width:50px;
+	max-height:50px;
+
 	width:100%;
 	height:100%;
 }
